--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             
             <div class="aside__cart-total">
-                <h3>TOTAL:<span id="total"></span></h3>
+                <h3>TOTAL: $ <span id="total"></span></h3>
             </div>
         </section>
     </main>
