--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
             </ul>
         </div>
         <div class="conteiner__categorias" id="variedades">
-            <a href="#"><img src="./assets/malbec1.jpeg" alt="">
+            <a href="#vinos"><img src="./assets/malbec1.jpeg" alt="">
                 <h2>MALBEC</h2>
             </a>
-            <a href="#"><img src="./assets/cabernet2.jpeg" alt="">
+            <a href="#vinos"><img src="./assets/cabernet2.jpeg" alt="">
                 <h2>CABERNET</h2>
             </a>
-            <a href="#"><img src="./assets/blanco2.jpeg" alt="">
+            <a href="#vinos"><img src="./assets/blanco2.jpeg" alt="">
                 <h2>BLANCO</h2>
             </a>
-            <a href="#"><img src="./assets/rosado2.jpeg" alt="">
+            <a href="#vinos"><img src="./assets/rosado2.jpeg" alt="">
                 <h2>ROSADO</h2>
             </a>
         </div>
